[package]
name = "euler-rs"
version = "0.1.0"
authors = ["Sam Weil <s.weil9391@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"

[lib] 
name="euler"
path="src/lib.rs"

[[bin]]
name="euler"
path="src/bin.rs"